--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Visual Studio 2015 user specific files
 .vs/
+*/.vs/
 
 # Compiled Object files
 *.slo
@@ -52,6 +53,7 @@ Plugins/**/Binaries/*
 
 # Builds
 Build/*
+*/Build/*
 
 # Whitelist PakBlacklist-<BuildConfiguration>.txt files
 !Build/*/
@@ -73,3 +75,7 @@ Plugins/**/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+*.uasset
+*vcxproj*
+*.uproject
